test/files/neg/t3189.check
t3189.scala:2: error: bad simple pattern: use _* to match a sequence
  val Array(a,b*) = ("": Any)
                ^
1 error
